...
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_search"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>
...
